<resources>
    <!--<string name="app_name">Clínica Virtual Meditec</string>-->
    <string name="app_name">Meditec</string>
    <string name="subname">clínica de atenciones primarias</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelar">Cancelar</string>
    <string name="terminar">Sí, salir</string>
    <string name="pregunta_terminar">¿Desea salir de la cita?</string>

    <string-array name="Pacientes">
        <item>Seleccione un paciente</item>
        <item>Torres Cardenas Carlos</item>
        <item>Meza Caballero Julio</item>
        <item>Santacruz Medina Fernando</item>
    </string-array>
    <string-array name="Genero">
        <item>Sexo</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="Medicos">
        <item>Todos los médicos</item>
        <item>Torres Cardenas Carlos</item>
        <item>Meza Caballero Julio</item>
        <item>Santacruz Medina Fernando</item>
    </string-array>
    <string name="title_activity_prueba">PruebaActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!--Pago Efectivo-->
    <string name="pregunta">¿Cómo funciona?</string>
    <string name="pe_titulo">Genera tu código CIP y págalo a través de:</string>
    <string name="pe_pago1">Banca Móvil / Internet:</string>
    <string name="pe_detalle1">Paga en BBVA, BCP, Interbank, Scotiabank, BanBif, Caja Arequipa y Banco Pichincha, a través de la opción pago de servicios.</string>
    <string name="pe_pago2">Agentes y Bodegas:</string>
    <string name="pe_detalle2">Deposita en BBVA, BCP, Interbank, Scotiabank, BanBif, Western Union, Tambo+, Kasnet, Ya Ganaste, Red Digital, Agente Niubiz, MoneyGram, Caja Arequipa, Disashop, Cellpower.</string>

    <!--<string-array name="tarjetas">
        <item>Marca</item>
        <item>Visa</item>
        <item>Mastercard</item>
        <item>American Express</item>
        <item>Diners Club</item>
    </string-array>
    <string-array name="mes">
        <item>Mes</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Setiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="year">
        <item>Año</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
    </string-array>-->
</resources>
