<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/ic_outline_report"
        android:padding="8dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/pregunta_terminar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btcancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:elevation="6dp"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/boton_secundary_sm"
            android:text="@string/cancelar"/>
        <Button
            android:id="@+id/btterminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:elevation="6dp"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/boton_primary_xs"
            android:text="@string/terminar"/>
    </LinearLayout>
</LinearLayout>